<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".AutentificationOTP">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        style="@style/icon_3"
        android:layout_marginTop="40dp"
        android:id="@+id/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_otp_you_received"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/grey"
        android:layout_below="@id/logo"
        android:id="@+id/text_numder_enter"/>
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_numder_enter"
        android:hint="@string/enter_otp_here"
        android:textColor="@color/black"
        android:id="@+id/inputOTP"
        android:textAlignment="center"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_get_change_your_number"
        android:id="@+id/changenumbertext"
        android:layout_below="@id/inputOTP"
        android:layout_centerHorizontal="true"
        android:textColor="@color/link_color"
        android:textSize="16sp"
        android:layout_marginTop="15dp"/>

    <android.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/sentOTPBtn"
        android:layout_below="@id/changenumbertext"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:text="@string/verify_otp"
        android:layout_marginTop="50dp"
        android:background="@color/dark_green"/>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sentOTPBtn"
        android:id="@+id/progresOPTVerify"
        android:visibility="invisible"
        android:layout_marginTop="30dp"/>



</RelativeLayout>