<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SetProfile">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/save_your_profile"
        android:layout_above="@+id/getUserImage"
        android:layout_marginBottom="30dp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/getUserName"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="80dp"
        android:id="@+id/getUserImage"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="120dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_account_box_24"
            android:id="@+id/getUserImageImg"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/getUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:hint="@string/enter_your_name"
        android:inputType="textCapWords" />

    <android.widget.Button
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:id="@+id/saveProfileBtn"
        android:layout_below="@id/getUserName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        android:background="@color/dark_green"/>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/saveProfileBtn"
        android:id="@+id/progresSaveProfile"
        android:visibility="invisible"
        android:layout_marginTop="30dp"/>



</RelativeLayout>