<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpdateProfile">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/toolbar_green"
        android:id="@+id/toolbarUpdate">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/backUpdate"
                app:tint="@color/white"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/update_your_profile"
                android:textSize="20sp"
                android:layout_toRightOf="@id/backUpdate"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/toolbarText"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/usernameUpdate"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="80dp"
        android:id="@+id/userImageUpdateCard"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="120dp">

        <ImageView
            android:id="@+id/userImageUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_account_box_24" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/usernameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:hint="@string/enter_new_name_here" />

    <android.widget.Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameUpdate"
        android:id="@+id/saveUpdateBtn"
        android:layout_marginTop="35dp"
        android:background="@color/dark_green"
        android:text="@string/update_profile"
        android:textColor="@color/white"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/saveUpdateBtn"
        android:id="@+id/progressUpdateProfile"
        android:visibility="invisible"
        android:layout_marginTop="30dp"/>


</RelativeLayout>